--- a/src/component/section/section1.css
+++ b/src/component/section/section1.css
@@ -1,3 +1,28 @@
+/* .section1 {
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+.section1>p {
+    font-size: 30px;
+    text-align: center;
+}
+
+.section1 b {
+    color: rgb(3, 71, 145);
+}
+
+.section1-sub {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section1-btn {
+    display: flex;
+    gap: 10px;
+} */
+
 .section1 {
     box-sizing: border-box;
     padding: 5px;
@@ -21,4 +46,21 @@
 .section1-btn {
     display: flex;
     gap: 10px;
+}
+
+@media screen and (max-width:500px) {
+    .section1 {
+        max-width: 100%;
+    }
+
+    .section1-sub {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:1005px) {
+    .section1 {
+        max-width: 630px;
+
+    }
 }
